# 3DRenderer

./: (Bresenham_algorithm_1_Unit_Test ${SDL2_LIBRARIES})ef  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Class_Diagram_UML.drawio  README.md  Untitled Diagram.drawio
.github/ISSUE_TEMPLATE/: cleanup.md  docs.md  feature.md  subtask.md
.github/workflows/: ci.yml  create-branch.yml
3DRenderer/: CMakeLists.txt
3DRenderer/camera/: CMakeLists.txt  Camera.cpp  Camera.h
3DRenderer/camera/tests/: CMakeLists.txt  Viewport_1_Unit_Test.cpp
3DRenderer/display/: CMakeLists.txt  Camera.cpp  Viewport.cpp  Viewport.h  depth_buffer.cpp  depth_buffer.h  frame_buffer.cpp  frame_buffer.h  framebuffer.cpp  framebuffer.h  key.h  viewport.cpp  viewport.h
3DRenderer/display/tests/: CMakeLists.txt  _viewport_1.cpp  _viewport_2.cpp  test_viewport_1.cpp  test_viewport_2.cpp
3DRenderer/forms/: CMakeLists.txt  README.md  entitiy.h  entity.cpp  entity.h  mesh.cpp  mesh.h  model.cpp  model.h
3DRenderer/forms/tests/: CMakeLists.txt  test_entity.cpp  test_mesh.cpp  test_model.cpp
3DRenderer/math/: CMakeLists.txt  Stage.cpp  Stage.h
3DRenderer/math/tests/: CMakeLists.txt  Reference_Frame_1_Unit_Test.cpp
3DRenderer/renderer/: CMakeLists.txt  Camera.cpp  camera.cpp  camera.h
3DRenderer/renderer/tests/: CMakeLists.txt  Camera_1_Unit_Test.cpp  Camera_2_Unit_Test.cpp  test_camera.cpp
3DRenderer/representations/: CMakeLists.txt  mesh.cpp  mesh.h  model.cpp  model.h
3DRenderer/representations/tests/: CMakeLists.txt  test_mesh.cpp  test_model.cpp
3DRenderer/utils/: CMakeLists.txt  Testing_Utils.h  clip_triangles.cpp  clip_triangles.h  draw_triangles.cpp  draw_triangles.h  draw_triangles_to_screen.cpp  draw_triangles_to_screen.h  geometry_types.h  load_cobj_file.cpp  load_cobj_file.h  load_data_file.h  load_obj_file.cpp  load_obj_file.h  loaddatafile.h  loadobjfile.cpp  loadobjfile.h  project_triangles.cpp  project_triangles.h  transform.cpp  transform.h
3DRenderer/utils/tests/: Bresenham_algorithm_1_Unit_Test.cpp  CMakeLists.txt  Color_Interpolation_1_Unit_Test.cpp  Eigen_Lib_Unit_Test.cpp  Triangle_Rasterization_1_Unit_Test.cpp  test_clip_triangles.cpp  test_eigen_lib.cpp  test_loading_obj_file.cpp  test_transform.cpp
CppUnitLite/: CMakeLists.txt  Test.h
cmake/: HandleEigen.cmake  HandlePrintConfiguration.cmake  HandleSFML.cmake  HandleThreads.cmake  HandleX11.cmake  ProjectTesting.cmake
data/: icosahedron.cobj  simple_house.cobj  tetrahedron.cobj
doc/: CMakeLists.txt  Doxyfile.in
examples/: 3d_render_demo.cpp  CMakeLists.txt  demo_viewport_key.cpp  house.cpp  main.cpp  show_2_windows.cpp  show_window.cpp  triangle_demo.cpp  two_objects.cpp
files/: document.txt
html/: Camera_8h_source.html  Math__Position__Object_8h_source.html  Reference__Frame_8h_source.html  Stage_8h_source.html  Vector__Object_8h_source.html  Viewport_8h_source.html  annotated.html  classCamera-members.html  classCamera.html  classCamera__coll__graph.map  classCamera__coll__graph.md5  classCamera__inherit__graph.map  classCamera__inherit__graph.md5  classMathPositionObject-members.html  classMathPositionObject.html  classMathPositionObject__inherit__graph.map  classMathPositionObject__inherit__graph.md5  classReferenceFrame-members.html  classReferenceFrame.html  classReferenceFrame__coll__graph.map  classReferenceFrame__coll__graph.md5  classReferenceFrame__inherit__graph.map  classReferenceFrame__inherit__graph.md5  classStage-members.html  classStage.html  classVectorObject-members.html  classVectorObject.html  classVectorObject__coll__graph.map  classVectorObject__coll__graph.md5  classVectorObject__inherit__graph.map  classVectorObject__inherit__graph.md5  classViewport-members.html  classViewport.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  inherit_graph_0.map  (+7 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js  variables_0.js  variables_1.js
libraries/: Testing_Methods.h  Testing_Utils.h  new_library.cpp  new_library.h  the_library.cpp  the_library.h
src/: CMakeLists.txt  Camera.cpp  Camera.h  Fibonacci.cpp  Fibonacci.h  Math_Position_Object.cpp  Math_Position_Object.h  Reference_Frame.cpp  Reference_Frame.h  Stage.h  Vector_Object.cpp  Vector_Object.h  Viewport.cpp  Viewport.h  main.cpp  my_header.h  my_source.cpp
tests/: Bresenham_algorithm_1_Performance_Test.cpp  CMakeLists.txt  Camera_1_Performance_Test.cpp  Camera_and_Reference_Frame_1_Integration_Test.cpp  Reference_Frame_and_Vector_Object_1_Integration_Test.cpp  Triangle_Rasterization_1_Performance_Test.cpp  test_main.cpp
tests/integration_tests/: CMakeLists.txt  Camera_Reference_Frame_1_Integration_Test.cpp  Camera_and_Reference_Frame_2_Integration_Test.cpp  Demo_File.cpp  Eigen_Lib_Inte_Test.cpp  TestMyClass_integration.cpp
tests/performance_tests/: Bresenham_algorithm_1_Performance_Test.cpp  CMakeLists.txt  Camera_1_Performance_Test.cpp  Camera_2_Performance_Test.cpp  Color_Interpolation_1_Performance_Test.cpp  Eigen_Lib_Perf_Test.cpp  Performance_Test_Examples.cpp  TestMyClass_performance.cpp  test_int.cpp
tests/unit_tests/: Bresenham_algorithm_1_Unit_Test.cpp  CMakeLists.txt  Camera_1_Unit_Test.cpp  Camera_2_Unit_Test.cpp  Reference_Frame_1_Unit_Test.cpp  Stage_1_Unit_Test.cpp  TestMyClass_unit.cpp  Triangle_Rasterization_1_Unit_Test.cpp  Vector_Object_1_Unit_Test.cpp  Viewport_1_Unit_Test.cpp  Viewport_2_Unit_Test.cpp  test_1.cpp  test_2.cpp
